# HelloAndroidEgui

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/android/helloegui/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/android/helloegui/: EguiActivity.kt  MainActivity.kt
app/src/main/java/com/example/android/helloegui/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/android/helloegui/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rustlib/: Cargo.toml
rustlib/.cargo/: config.toml
rustlib/src/: app.rs  lib.rs
