[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
egui = "0.29.1"
egui_demo_lib = "0.29.1"
chrono = "0.4"
pollster = "0.3"
wgpu = { version = "22.1.0", default-features = false }
log = "0.4"

[profile.release]
strip = "debuginfo"

[target.'cfg(debug_assertions)'.dependencies]
android_logger = "0.14.1"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.5", default-features = false, features = [
    "android-native-activity",
] }
egui-wgpu = { version = "0.29.1" }
egui-winit = { version = "0.29.1", default-features = false, features = [
    "clipboard",
    "links",
] }
ndk = "0.9"
ndk-sys = "0.6.0"
