[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
egui = "0.29"
egui-winit = "0.29"
egui_demo_lib = "0.29" # Same as egui version in egui_wgpu_backend
egui_wgpu_backend = "0.31"
epi = "0.17"
chrono = "0.4"
pollster = "0.3"
wgpu = { version = "22", default-features = false }
tracing-subscriber = "0.3"
log = "*"

[profile.release]
strip = "debuginfo"

[target.'cfg(debug_assertions)'.dependencies]
simple_logger = "*"
android_logger = "0.14.1"

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
winit = { version= "0.30", features = ["android-native-activity"] } #default-features = false,
egui_winit_platform = { version = "0.24", features = ["default_fonts"] }
